# case-tool-assessment-4

./: .gitignore  readme.md
.github/workflows/: CI-camkes.yml
basic/test_data_port_periodic_domains/: readme.md
basic/test_data_port_periodic_domains/aadl/: .system  test_data_port_periodic_domains.aadl
basic/test_data_port_periodic_domains/aadl/.slang/: test_data_port_periodic_domains_top_impl_Instance.json
basic/test_data_port_periodic_domains/aadl/behavior_code/: consumer.c
basic/test_data_port_periodic_domains/hamr/c/ext-c/consumer_thread_i_consumer_consumer/: consumer_thread_i_consumer_consumer.c  consumer_thread_i_consumer_consumer_api.c  (+1 more)
basic/test_data_port_periodic_domains/hamr/camkes-seL4/: CMakeLists.txt
basic/test_data_port_periodic_domains/hamr/camkes-seL4/slang_libraries/consumer_thread_i_consumer_consumer/: CMakeLists.txt  typemap.properties
basic/test_data_port_periodic_domains/hamr/camkes-seL4/slang_libraries/consumer_thread_i_consumer_consumer/app-consumer/: consumer.c
basic/test_data_port_periodic_domains/hamr/camkes-seL4/slang_libraries/consumer_thread_i_consumer_consumer/ext/: consumer_thread_i_consumer_consumer.c  consumer_thread_i_consumer_consumer.h  consumer_thread_i_consumer_consumer_adapter.c  consumer_thread_i_consumer_consumer_adapter.h  consumer_thread_i_consumer_consumer_api.c  consumer_thread_i_consumer_consumer_api.h
basic/test_data_port_periodic_domains/hamr/camkes-seL4/slang_libraries/consumer_thread_i_consumer_consumer/runtime/: all.c  all.h  type-composite.h  types.c  types.h
basic/test_data_port_periodic_domains/hamr/camkes-seL4_Only/: CMakeLists.txt  graph.dot  top_impl_Instance.camkes
basic/test_data_port_periodic_domains/hamr/camkes-seL4_Only/types/: CMakeLists.txt
basic/test_data_port_periodic_domains/microkit/: Makefile  consumer.c  dataport.system  end_of_schedule_ping.c  periodic_dispatcher.c  producer.c  questions.md  system.mk
basic/test_data_port_periodic_three_domains/aadl/: .project  test_data_port_periodic_three_domains.aadl
basic/test_data_port_periodic_three_domains_CASE-simple/: readme.md
basic/test_data_port_periodic_three_domains_CASE-simple/aadl/: .gitignore  .project  test_data_port_periodic_three_domains.aadl
basic/test_data_port_periodic_three_domains_CASE-simple/aadl/.slang/: test_data_port_periodic_three_domains_top_impl_Instance.json
basic/test_data_port_periodic_three_domains_CASE-simple/aadl/diagrams/: test_data_port_periodic_three_domains_top_impl.aadl_diagram
basic/test_data_port_periodic_three_domains_CASE-simple/microkit/: microkit.dot  microkit.system  system.mk
basic/test_data_port_periodic_three_domains_CASE-simple/microkit/include/: types.h
basic/test_data_port_periodic_three_domains_CASE-simple/microkit_initial/: microkit.dot
basic/test_data_port_periodic_three_domains_CASE/aadl/: .project  .system  domain_schedule.c  test_data_port_periodic_three_domains.aadl
basic/test_data_port_periodic_three_domains_CASE/aadl/behavior_code/: T1.c  T2.c
basic/test_data_port_periodic_three_domains_CASE/hamr/camkes-seL4_Only/: CMakeLists.txt  graph.dot  graph_simple.dot  settings.cmake  top_impl_Instance.camkes
basic/test_data_port_periodic_three_domains_CASE/hamr/camkes-seL4_Only/components/VM/apps/vmp3/: CMakeLists.txt  vmp3.c
basic/test_data_port_periodic_three_domains_CASE/hamr/camkes-seL4_Only/kernel/: domain_schedule.c
basic/test_data_port_periodic_three_domains_CASE/hamr/camkes-seL4_Only/types/: CMakeLists.txt
basic/test_event_data_port_periodic_domains/: readme.md
basic/test_event_data_port_periodic_domains/aadl/: .system  test_event_data_port_periodic_domains.aadl
basic/test_event_data_port_periodic_domains/aadl/.slang/: test_event_data_port_periodic_domains_top_impl_Instance.json
basic/test_event_data_port_periodic_domains/hamr/camkes-seL4/: CMakeLists.txt
basic/test_event_data_port_periodic_domains/hamr/camkes-seL4/types/: CMakeLists.txt
basic/test_event_data_port_periodic_domains/hamr/camkes-seL4_Only/: CMakeLists.txt  graph.dot  top_impl_Instance.camkes
basic/test_event_data_port_periodic_domains/hamr/camkes-seL4_Only/types/: CMakeLists.txt
basic/test_event_port_periodic_domains/: readme.md
basic/test_event_port_periodic_domains/.ci/: ci.cmd
basic/test_event_port_periodic_domains/aadl/: .system  test_event_port_periodic_domains.aadl
basic/test_event_port_periodic_domains/aadl/.slang/: test_event_port_periodic_domains_top_impl_Instance.json
basic/test_event_port_periodic_domains/aadl/behavior_code/: consumer.c  producer.c
basic/test_event_port_periodic_domains/hamr/c/etc/: ipc.c
basic/test_event_port_periodic_domains/hamr/c/ext-schedule/: round_robin.c  static_scheduler.c
basic/test_event_port_periodic_domains/hamr/camkes-seL4/: CMakeLists.txt
basic/test_event_port_periodic_domains/hamr/camkes-seL4/slang_libraries/producer_t_i_producer_producer/: CMakeLists.txt  typemap.properties
basic/test_event_port_periodic_domains/hamr/camkes-seL4/slang_libraries/producer_t_i_producer_producer/ext/: producer_t_i_producer_producer.c  producer_t_i_producer_producer.h  producer_t_i_producer_producer_adapter.h  producer_t_i_producer_producer_api.c  producer_t_i_producer_producer_api.h
basic/test_event_port_periodic_domains/hamr/camkes-seL4/slang_libraries/producer_t_i_producer_producer/runtime/: all.c  all.h  type-composite.h  types.c  types.h
basic/test_event_port_periodic_domains/hamr/camkes-seL4/types/: CMakeLists.txt
basic/test_event_port_periodic_domains/hamr/camkes-seL4_Only/: CMakeLists.txt  top_impl_Instance.camkes
vm/test_event_data_port_periodic_domains_VM/receiver_vm/: readme.md
vm/test_event_data_port_periodic_domains_VM/receiver_vm/.ci/: ci.cmd
vm/test_event_data_port_periodic_domains_VM/receiver_vm/aadl/: test_event_data_port_periodic_domains.aadl
vm/test_event_data_port_periodic_domains_VM/receiver_vm/aadl/.slang/: test_event_data_port_periodic_domains_top_impl_Instance.json
vm/test_event_data_port_periodic_domains_VM/receiver_vm/hamr/camkes-seL4/: CMakeLists.txt  graph.dot  graph_simple.dot  top_impl_Instance.camkes
(+262 files in other folders)
